--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
         android:textColorHint="#c5c5c5" />
     <!-- EditText: Phone Number (Mobile)-->
     <EditText
-        android:id="@+id/PhoneMobileEt"
+        android:id="@+id/phoneMobileEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/lastNameEt"
@@ -57,10 +57,10 @@
          />
 <!-- EditText: Phone Number (Home)-->
     <EditText
-        android:id="@+id/PhoneHomeEt"
+        android:id="@+id/phoneHomeEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/PhoneMobileEt"
+        android:layout_below="@id/phoneMobileEt"
         android:layout_marginTop="5dp"
         android:background="#fff"
         android:hint="Phone Number (Home)"
@@ -74,7 +74,7 @@
         android:id="@+id/emailEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/PhoneHomeEt"
+        android:layout_below="@id/phoneHomeEt"
         android:layout_marginTop="5dp"
         android:background="#fff"
         android:hint="Email"
